syntax = "proto3";

// ConversationCustomMetadata stores custom metadata for XMTP conversations
message ConversationCustomMetadata {
    string description = 1;
    repeated ConversationProfile profiles = 2;  // Array of participant profiles
}

// ConversationProfile represents a participant in the conversation
message ConversationProfile {
    string inboxId = 1;
    optional string name = 2;
    optional string image = 3;
}
